--- a/style.css
+++ b/style.css
@@ -9,8 +9,17 @@
 }
 
 body {
-    background-image: url(./woodbg_tilable.png);
+    /* background-image: url(./woodbg_tilable.png); */
+    background-color: var(--top-bottom-bg-color);
     background-size: 100px;
+}
+
+.visible {
+    visibility: visible;
+}
+
+.hidden {
+    visibility: hidden;
 }
 
 /* TOP CONTAINER ELEMENTS */
@@ -46,6 +55,7 @@ div {
     color: rgb(54, 54, 54);
     font-weight: bold;
     font-size: 3rem;
+    font-family:'Times New Roman', Times, serif;
     border: 1px solid rgb(96, 96, 96);
     background: radial-gradient(rgb(239, 239, 239) 30%, rgb(150, 150, 150) 100%);
     justify-content: center;
@@ -59,13 +69,12 @@ div {
     /* width: 300px;
     height: 400px; */
     padding: 22px;
-    background-color: white;
+    background-color: rgb(255, 223, 202);
     color:black;
     font-size: 1.1rem;
     line-height: 1.4rem;
     border-radius: 24px;
     box-shadow: 4px 4px 8px 4px black;
-    visibility: hidden;
     flex-direction:column;
     justify-content: flex-start;
 }
@@ -127,6 +136,7 @@ div {
     content: "";
     /* display: block; */
     position: absolute;
+    z-index: 5;
     top: 0;
     right: 0;
     bottom: 0;
@@ -151,7 +161,12 @@ div {
     justify-content: center;
     align-items: flex-end;
     position: relative;
-
+    /* z-index: 5; */
+    /* background-image: url(./book.png);
+    background-repeat: no-repeat;
+    background-position: left 59px bottom 26px;
+    background-size: 246px 302px;
+    filter: drop-shadow(6px 3px 6px #000000); */
 }
 
 .book-container > img {
@@ -160,14 +175,14 @@ div {
     top: 0;
     left: 0;
     width: 100%;
-    height: 104%;
+    height: 103%;
     object-fit: cover;
     mix-blend-mode: soft-light;
 }
 
 .book {
     margin-bottom: 28px;
-    background-image: url(./book.png);
+    background-image: radial-gradient(circle at top,rgba(255,255,255,0.5) 0%, rgba(139, 139, 139, 0) 30%), url(./book.png);
     background-repeat: no-repeat;
     background-position: center bottom;
     background-size: 83% 100%;
@@ -177,6 +192,8 @@ div {
     flex-direction:column;
     justify-content: flex-start;
     align-items: flex-start;
+    position: relative;
+    z-index: 15;
 }
 
 .book-content-container {
@@ -285,8 +302,12 @@ div {
     background: linear-gradient(180deg, rgba(208,208,208,0.8) 0%, rgba(138,138,138,0.8) 100%);
 }
 
+.book-content.status-button:hover {
+    background: linear-gradient(180deg, rgba(155, 155, 155, 0.8) 0%, rgba(67, 67, 67, 0.8) 100%);
+}
+
+
 .book-content.status-color {
-    background-color: red;
     clip-path: circle(40% at 50% 50%);
     border: 1px solid darkgray;
     width: 20px;
@@ -295,28 +316,64 @@ div {
     margin-right: 6px;
 }
 
+.status-color[data-readstatus="unread"] {
+    background-color: rgb(216, 0, 0);
+}
+
+.status-color[data-readstatus="currently"] {
+    background-color: rgb(255, 145, 0);
+}
+
+.status-color[data-readstatus="finished"] {
+    background-color: rgb(0, 190, 0);
+}
 
 /* READ STATUS DROPDOWN */
 
 .status-dropdown {
     position: absolute;
-    width: 180px;
-    height: 100px;
-    border: 1px solid  darkgray;
+    border: 2px solid  rgb(86, 86, 86);
     border-radius: 16px;
+    background-color: rgba(208,208,208,1);
+    top: 30px;
     right: 0px;
-    bottom: -1px;
     flex-direction: column;
     justify-content: space-evenly;
-    background-color: rgba(208,208,208,1);
-    z-index: 999;
+    z-index: 90;
+}
 
+.status-dropdown-item:first-child {
+    border-radius: 14px 14px 0 0;
+    border-bottom: 1px dotted gray;
+}
+
+.status-dropdown-item:last-child {
+    border-radius: 0 0 14px 14px;
+    border-top: 1px dotted gray;
 }
 
 .status-dropdown-item {
     justify-content: space-between;
     align-items: center;
-    margin-left: 20px;
+    padding: 4px 0px 4px 20px;
+    font-size: 1rem;
+    width: 15ch;
+}
+
+.status-dropdown-item:hover {
+    background-color: rgb(138, 138, 138);
+}
+
+/* .book-content.status-color.unread {
+    background-color: rgb(216, 0, 0);
+}
+
+.in-progress {
+    background-color: rgb(255, 145, 0);
+}
+
+.book-content.status-color.finished {
+    background-color: rgb(0, 190, 0); */
 }
 
 /* BOTTOM CONTAINER ELEMENTS */
