--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-/* * {
-    border: 1px solid red !important;
-} */
-
 :root {
     font-size: 18px;
     --top-bottom-bg-color: rgb(81, 53, 14);
@@ -9,7 +5,6 @@
 }
 
 body {
-    /* background-image: url(./woodbg_tilable.png); */
     background-color: var(--top-bottom-bg-color);
     background-size: 100px;
 }
@@ -193,7 +188,8 @@ legend {
 
 #form-section-bottom-row-container {
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
+    gap:16px;
 }
 
 #form-section-pages {
@@ -206,7 +202,7 @@ legend {
 }
 
 #form-section-readstatus {
-    width:60%;
+    /* width:60%; */
     flex:2 0 auto;
     display:block;
     margin: 0 0 12px 0;
@@ -293,12 +289,6 @@ legend {
     justify-content: center;
     align-items: flex-end;
     position: relative;
-    /* z-index: 5; */
-    /* background-image: url(./book.png);
-    background-repeat: no-repeat;
-    background-position: left 59px bottom 26px;
-    background-size: 246px 302px;
-    filter: drop-shadow(6px 3px 6px #000000); */
 }
 
 .book-container > img {
